# tessera-ts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/workflows/: publish.yml  tessera-ts.yml
.woodpecker/: browser.yml  handshake.yml  publish.yml  rust.yml  ts-tests.yml
crates/tessera-wasm/: Cargo.toml
crates/tessera-wasm/src/: lib.rs
harness/blindindex-parity/: go.mod  main.go
harness/handshake/: handshake.test.mjs
harness/vault-parity/: go.mod  main.go
harness/vectors/: gen_go.go  go.mod
harness/vmk-vectors/: gen_vmk.ts
vectors/: blind-index.json  schema.md  vault.json
